[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutiepy"
version = "0.1.0"
authors = [
  { name="Bobby Chen", email="chenbobby@cutiepy.org" },
]
description = "CutiePy is a batteries-included job queue for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cutebakery/cutiepy"
"Bug Tracker" = "https://github.com/cutebakery/cutiepy/issues"

[tool.hatch.build]
artifacts = [
  "cutiepy_broker/_build/prod/rel/cutiepy_broker",
]
