[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutiepy"
description = "CutiePy is an open source job scheduler for Python workloads."
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
authors = [
  { name="Bobby Chen", email="chenbobby@fastmail.com" },
]
keywords = [
  "job scheduler",
  "job queue",
  "task queue",
  "cronjob",
  "worker",
  "broker"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click>=8.1",
  "pickle5>=0.0.11",
  "requests>=2.28",
  "types-requests>=2.28",
]
dev-dependencies = [
  # Code Consistency
  "black",
  "flake8",
  "isort",
  "mypy",

  # Tests
  "pytest",
  "pytest-cov",

  # Builds
  "hatch",

  # Documentation
  "sphinx",
  "furo",
  "sphinxext-opengraph",
  "sphinx-design",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://cutiepy.org"
Documentation = "https://cutiepy.org/docs"
"Source Code" = "https://github.com/chenbobby/cutiepy"
"Bug Tracker" = "https://github.com/chenbobby/cutiepy/issues"

[project.scripts]
cutiepy = "cutiepy:main"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.force-include]
"cutiepy_broker/_build/prod/rel/cutiepy_broker" = "cutiepy_broker/_build/prod/rel/cutiepy_broker"

[tool.hatch.version]
path = "src/cutiepy/__version__.py"
