[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutiepy-cli"
version = "0.0.1"
authors = [
  { name="Bobby Chen", email="chenbobby@fastmail.com" },
]
description = "CutiePy is a batteries-included job queue for Python workloads. The CutiePy CLI allows you to run Brokers and Workers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://cutiepy.org"
"Bug Tracker" = "https://github.com/chenbobby/cutiepy/issues"

[tool.hatch.build]
artifacts = [
  "cutiepy_broker/_build/prod/rel/cutiepy_broker",
]
