[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutiepy"
version = "0.0.1"
authors = [
  { name="Bobby Chen", email="chenbobby@fastmail.com" },
]
description = "CutiePy is a batteries-included job queue for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "pickle5",
  "requests",
  "types-requests",
]

[project.urls]
"Homepage" = "https://cutiepy.org"
"Bug Tracker" = "https://github.com/chenbobby/cutiepy/issues"

[tool.hatch.build]
